recetas index y js

--- a/recetas.html
+++ b/recetas.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HOLA</h1>
+    <h1 class="receta"></h1>
+    <div class="imagen_receta"></div>
+    <p class="ingredientes"></p>
+    <p class="instrucciones"></p>
+    <script src="js/recetas.js"></script>
 </body>
 </html>
