recetas detalle html, js y css

--- a/recetas.html
+++ b/recetas.html
@@ -9,7 +9,9 @@
 <body>
     <h1 class="receta"></h1>
     <div class="imagen_receta"></div>
-    <p class="ingredientes"></p>
+    <h3>Ingredientes</h3>
+    <p class="ingredientes"> </p>
+    <h3>Instrucciones</h3>
     <p class="instrucciones"></p>
     <script src="js/recetas.js"></script>
 </body>
