header footer y css

--- a/receta.html
+++ b/receta.html
@@ -9,10 +9,19 @@
 <body>
     <h1 class="receta"></h1>
     <div class="imagen_receta"></div>
+
     <h3>Ingredientes</h3>
-    <p class="ingredientes"> </p>
+    <ul>
+        <li class="ingredientes"> </li>
+    </ul>
+
     <h3>Instrucciones</h3>
-    <p class="instrucciones"></p>
-    <script src="js/recetas.js"></script>
+    <ol>
+        <li class="instrucciones"></li>
+    </ol>
+    
+    <h3>Tiempo de cocción</h3>
+    <p class="tiempo_coccion"></p>
+    <script src="js/receta.js"></script>
 </body>
 </html>
