categories js (no terminado)

--- a/categories.html
+++ b/categories.html
@@ -10,7 +10,8 @@
     <h1>Categorias</h1>
     <h3>Categorias</h3>
     <ul>
-        <li class=".categorias"> </li>
+        <li class="categorias"> </li>
     </ul>
+    <script src="js/categories.js"></script>
 </body>
 </html>
