--- a/home.html
+++ b/home.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <img class="logo" src="./img/logobakery.png" alt="logo">
+
+    </header>
     <h1>HOLA</h1>
 </body>
 </html>
