login y register sin java

--- a/login.html
+++ b/login.html
@@ -22,7 +22,21 @@
             <li><a href="categories.html">CATEGORIAS</a></li>
         </ul>
     </header>
-    <h1>HOLA</h1>
+
+    <main class="logi">
+        <form action="index.html" method="get">
+            <div>
+                <label for="email"><b>Email</b></label>
+              <input type="email" name="email" id="email" placeholder="Escribe tu email">
+            </div>
+            <div>
+                <label for="contrasennia"><b>Password</b></label>
+                <input type="password" name="contrasennia" id="contrasennia" placeholder="Contraseña">
+            </div>
+            <div> <a href="register.html">No tengo cuenta</a></div>
+            <button type="submit"> <b>Enviar</b> </button>
+        </form>
+    </main>
 
 <footer> 
     <div class="footer_nombres">
