--- a/register.html
+++ b/register.html
@@ -22,7 +22,30 @@
             <li><a href="categories.html">CATEGORIAS</a></li>
         </ul>
     </header>
-    <h1>HOLA</h1>
+    <main class="regi">
+        <form action="index.html" method="get">
+            <div>
+            <label for="email"><b>Email</b></label>
+                <input type="email" name="email" id="email" placeholder="Escribe tu email" required>
+            </div>
+            <div>
+            <label for="contrasennia"><b>Password</b></label>
+            <input type="password" name="contrasennia" id="contrasennia" placeholder="Contraseña">
+            </div>
+
+            <div>
+                <label for="terminos"><b>Acepto términos y condiciones</b></label>
+                <input type="checkbox" name="terminos" id="terminos">
+            </div>
+
+            <div> 
+                <a href="login.html">Ya tengo cuenta</a>
+            </div>
+        <button type="submit"> <b>Enviar</b> </button>
+            
+        </form>
+
+    </main>
     <footer> 
         <div class="footer_nombres">
             <p>Sofía Sojo</p>
