--- a/login.html
+++ b/login.html
@@ -22,8 +22,29 @@
             <li><a href="categories.html">CATEGORIAS</a></li>
         </ul>
     </header>
-    <h1>HOLA</h1>
-
+    <h1>Login</h1>
+   <section class="seccion_login">
+    <form method="GET" action="./index.html" class="form1">
+        <div>   
+            <label for="Email">Email</label>
+            <input type="email" placeholder="Email" name="email"  id= "email">
+            <div class="email"></div>
+        </div>
+        <div>
+            <label for="Contraseña">Contraseña</label>
+            <input type="Contraseña" placeholder="Contraseña" name="Contraseña" id="contraseña">
+            <div class="contraseña"></div>
+        </div>
+        <div>
+            <button type="submit">Ingresar</button>
+        </div>
+        <div>
+            <a href="register.html" class="button-link">No tengo cuenta</a>
+        </div>
+    </form>
+</section>
+    
+<script src="js/login.js"></script>
 <footer> 
     <div class="footer_nombres">
         <p>Sofía Sojo</p>
@@ -31,5 +52,6 @@
         <p>Sophia Haley</p>
     </div>
 </footer>
+
 </body>
 </html>
