--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
             <li><a href="categories.html">CATEGORIAS</a></li>
         </ul>
     </header>
-    <h1>HOLA</h1>
+    <h1>Registro</h1>
     <footer> 
         <div class="footer_nombres">
             <p>Sofía Sojo</p>
