--- a/register.html
+++ b/register.html
@@ -20,10 +20,17 @@
         <ul class="carpetas">
             <li><a href="index.html">HOME</a></li>
             <li><a href="categories.html">CATEGORIAS</a></li>
+            <li class="buscate"><form action="index.html" method="get" class="buscador">
+                <div class="buscatexto">
+                    <label for="buscador">BUSCADOR</label>
+                    <input type="Buscador" name="buscador" id="buscador" placeholder="Buscador">
+                </div>
+                <button type="submit"> <b>Buscar</b> </button>
+            </form></li>
         </ul>
     </header>
-    <h1>HOLA</h1>
-    <main class="regi"></main>
+    <h1 class="titulo">REGISTRO</h1>
+    <main class="regi">
         <form action="index.html" method="get">
             <div>
             <label for="email"><b>Email</b></label>
@@ -44,6 +51,9 @@
             
         </form>
     </main>
+
+    <script src="js/register.js"></script>
+
     <footer> 
         <div class="footer_nombres">
             <p>Sofía Sojo</p>
