--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         <ul class="carpetas">
             <li><a href="index.html">HOME</a></li>
             <li><a href="categories.html">CATEGORIAS</a></li>
+            <li class="buscate"><form action="index.html" method="get" class="buscador">
+                <div class="buscatexto">
+                    <label for="buscador">BUSCADOR</label>
+                    <input type="Buscador" name="buscador" id="buscador" placeholder="Buscador">
+                </div>
+                <button type="submit"> <b>Buscar</b> </button>
+            </form></li>
         </ul>
     </header>
     
