--- a/receta.html
+++ b/receta.html
@@ -30,20 +30,21 @@
         </ul>
     </header>
     <h1 class="receta"></h1>
-    <div class="imagen_receta"></div>
 
-    <h3>Ingredientes</h3>
-    <ul>
-        <li class="ingredientes"> </li>
-    </ul>
+    <section class="section_recetas">
+        <div class="imagen_receta"></div>
+        <article class="receta_instru">
+            <h3>Instrucciones</h3>
+            <ol>
+                <li class="instrucciones"></li>
+            </ol>
+        </article>
+        <article class="receta_tiempo">
+            <h3>Tiempo de cocción</h3>
+            <p class="tiempo_coccion"></p>
+        </article>
+    </section>
 
-    <h3>Instrucciones</h3>
-    <ol>
-        <li class="instrucciones"></li>
-    </ol>
-    
-    <h3>Tiempo de cocción</h3>
-    <p class="tiempo_coccion"></p>
     <script src="js/receta.js"></script>
 
 <footer> 
