--- a/login.html
+++ b/login.html
@@ -35,15 +35,15 @@
     <main class="logi">
         <form action="index.html" method="get">
             <div>
-                <label for="email"><b>Email</b></label>
+                <label for="email">Email</label>
               <input type="email" name="email" id="email" placeholder="Escribe tu email">
             </div>
             <div>
-                <label for="contraseña"><b>Password</b></label>
+                <label for="contraseña">Password</label>
                 <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
             </div>
             <div> <a href="register.html">No tengo cuenta</a></div>
-            <button type="submit"> <b>Enviar</b> </button>
+            <button type="submit"> Enviar </button>
         </form>
     </main>
 <script src="js/login.js"></script>
