agregue la categoria categorias en recetas html

--- a/receta.html
+++ b/receta.html
@@ -43,6 +43,10 @@
             <h3>Tiempo de cocción</h3>
             <p class="tiempo_coccion"></p>
         </article>
+        <article class="receta_categorias">
+            <h3>Categorias</h3>
+            <p class="categorias_receta"></p>
+        </article>
     </section>
 
     <script src="js/receta.js"></script>
