diseñé y agregue un background, cambié tipografía y agregúe background solido a las grillas

--- a/login.html
+++ b/login.html
@@ -29,31 +29,30 @@
             </form></li>
         </ul>
     </header>
-
     <h1 class="titulo">LOGIN</h1>
 
     <main class="logi">
         <form action="index.html" method="get">
             <div>
-                <label for="email">Email</label>
+                <label for="email"><b>Email</b></label>
               <input type="email" name="email" id="email" placeholder="Escribe tu email">
             </div>
             <div>
-                <label for="contraseña">Password</label>
+                <label for="contraseña"><b>Password</b></label>
                 <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
             </div>
-            <div> <a href="register.html">No tengo cuenta</a></div>
-            <button type="submit"> Enviar </button>
+            <div> <a href="register.html"><u>No tengo cuenta</u></a></div>
+            <button type="submit"> <b>Enviar</b> </button>
         </form>
     </main>
-<script src="js/login.js"></script>
-<footer> 
-    <div class="footer_nombres">
-        <p>Sofía Sojo</p>
-        <p>Paula Bernstein</p>
-        <p>Sophia Haley</p>
-    </div>
-</footer>
 
-</body>
-</html>
+    <script src="js/login.js"></script>
+    <footer> 
+        <div class="footer_nombres">
+            <p>Sofía Sojo</p>
+            <p>Paula Bernstein</p>
+            <p>Sophia Haley</p>
+        </div>
+    </footer>
+    
+    </body>
