--- a/register.html
+++ b/register.html
@@ -34,22 +34,20 @@
         <form action="index.html" method="get">
             <div>
             <label for="email"><b>Email</b></label>
-                <input type="email" name="email" id="email" placeholder="Escribe tu email" >
-                <div class="email"></div>
+                <input type="email" name="email" id="email" placeholder="Escribe tu email" required>
             </div>
             <div>
-            <label for="contraseña"><b>Password</b></label>
-            <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
-            <div class="contraseña"></div>
+            <label for="contrasennia"><b>Password</b></label>
+            <input type="password" name="contrasennia" id="contrasennia" placeholder="Contraseña">
             </div>
             <div>
                 <label for="terminos"><b>Acepto términos y condiciones</b></label>
                 <input type="checkbox" name="terminos" id="terminos">
             </div>
             <div> 
-                <a href="login.html">Ya tengo cuenta</a>
+                <a href="login.html"><u>Ya tengo cuenta</u></a>
             </div>
-        <button type="submit" class="boton_enviar"> <a href="login.html">Enviar </a> </button>
+        <button type="submit"> <b>Enviar</b> </button>
             
         </form>
     </main>
