--- a/search-results.html
+++ b/search-results.html
@@ -20,7 +20,7 @@
         <ul class="carpetas">
             <li><a href="index.html">HOME</a></li>
             <li><a href="categories.html">CATEGORIAS</a></li>
-            <li class="buscate"><form action="index.html" method="get" class="buscador">
+            <li class="buscate"><form action="search-results.html" method="get" class="buscador">
                 <div class="buscatexto">
                     <label for="buscador">BUSCADOR</label>
                     <input type="Buscador" name="buscador" id="buscador" placeholder="Buscador">
