--- a/categories.html
+++ b/categories.html
@@ -31,9 +31,7 @@
     </header>
     <h1>Categorias</h1>
     <h3>Categorias</h3>
-    <ul>
-        <li class="categorias"> </li>
-    </ul>
+    <section class="categories_container"></section>
     <script src="js/categories.js"></script>
 <footer> 
     <div class="footer_nombres">
