catergoy js (con paula)

--- a/category.html
+++ b/category.html
@@ -29,7 +29,9 @@
             </form></li>
         </ul>
     </header>
-    <h1>HOLA</h1>
+    <h1 class="receta"></h1>
+<section class="grilla_category"></section>
+    <script src="js/category.js"></script>
 
 <footer> 
     <div class="footer_nombres">
