--- a/search-results.html
+++ b/search-results.html
@@ -29,7 +29,7 @@
             </form></li>
         </ul>
     </header>
-    <h1>HOLA</h1>
+    <h1>Search</h1>
     <footer> 
         <div class="footer_nombres">
             <p>Sofía Sojo</p>
