--- a/category.html
+++ b/category.html
@@ -29,8 +29,10 @@
             </form></li>
         </ul>
     </header>
+    
     <h1 class="receta"></h1>
-<section class="grilla_category"></section>
+    <section class="grilla_categoria"></section>
+
     <script src="js/category.js"></script>
 
 <footer> 
