--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      
     </section>
     <form>
-        <button type="submit" class="cargar_mas" > Cargar más </button>
+        <button type="submit" id="cargar_mas" > Cargar más </button>
     </form>
     <footer> 
         <div class="footer_nombres">
