register y login js corregidos

--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
     <h1 class="titulo">LOGIN</h1>
 
     <main class="logi">
-        <form action="index.html" method="get">
+        <form class="form_login" action="index.html" method="get">
             <div>
                 <label for="email"><b>Email</b></label>
               <input type="email" name="email" id="email" placeholder="Escribe tu email">
@@ -47,6 +47,7 @@
     </main>
 
     <script src="js/login.js"></script>
+    
     <footer> 
         <div class="footer_nombres">
             <p>Sofía Sojo</p>
@@ -54,5 +55,6 @@
             <p>Sophia Haley</p>
         </div>
     </footer>
-    
+   
     </body>
+  </html>
