--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
     </header>
     <h1 class="titulo">REGISTRO</h1>
     <main class="regi">
-        <form action="index.html" method="get">
+        <form class="form_register" action="index.html" method="get">
             <div>
             <label for="email"><b>Email</b></label>
                 <input type="email" name="email" id="email" placeholder="Escribe tu email" required>
