--- a/receta.html
+++ b/receta.html
@@ -35,8 +35,8 @@
         <div class="imagen_receta"></div>
         <article class="receta_instru">
             <h3>Instrucciones</h3>
-            <ol>
-                <li class="instrucciones"></li>
+            <ol class="instrucciones">
+                
             </ol>
         </article>
         <article class="receta_tiempo">
