search-results js

--- a/search-results.html
+++ b/search-results.html
@@ -33,7 +33,7 @@
             </li>
         </ul>
     </header>
-    <h1>Search</h1>
+    <h1>Resultados</h1>
     <section class="recetas">
     </section>
     <footer>
