--- a/register.html
+++ b/register.html
@@ -34,12 +34,14 @@
         <form class="form_register" action="index.html" method="get">
             <div>
             <label for="email"><b>Email</b></label>
-                <input type="email" name="email" id="email" placeholder="Escribe tu email" required>
+                <input type="email" name="email" id="email" placeholder="Escribe tu email" >
             </div>
+            <div class="email"></div>
             <div>
-            <label for="contrasennia"><b>Password</b></label>
-            <input type="password" name="contrasennia" id="contrasennia" placeholder="Contraseña">
+            <label for="contraseña"><b>Password</b></label>
+            <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña">
             </div>
+            <div class="contraseña"></div>
             <div>
                 <label for="terminos"><b>Acepto términos y condiciones</b></label>
                 <input type="checkbox" name="terminos" id="terminos">
