--- a/search-results.html
+++ b/search-results.html
@@ -23,10 +23,11 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="categories.html">CATEGORIAS</a></li>
             <li class="buscate">
-                <form action="search-results.html" method="get" class="buscador">
+                <form action="search-results.html" method="get" class="form_search">
                     <div class="buscatexto">
                         <label for="buscador">BUSCADOR</label>
                         <input type="Buscador" name="buscador" id="buscador" placeholder="Buscador">
+                        <div class="buscador"></div>
                     </div>
                     <button type="submit"> <b>Buscar</b> </button>
                 </form>
