--- a/search-results.html
+++ b/search-results.html
@@ -34,9 +34,12 @@
             </li>
         </ul>
     </header>
-    <h1>Resultados</h1>
+
+    <h1>Resultados de búsqueda para: <span id="resultado-buscador"></span></h1>
+    <h2 class="lo_buscado"><span id="resultado-buscador"></span> </h2>
     <section class="recetas">
     </section>
+    
     <footer>
         <div class="footer_nombres">
             <p>Sofía Sojo</p>
