--- a/search-results.html
+++ b/search-results.html
@@ -35,11 +35,10 @@
         </ul>
     </header>
 
-    <h1>Resultados de búsqueda para: <span id="resultado-buscador"></span></h1>
-    <h2 class="lo_buscado"><span id="resultado-buscador"></span> </h2>
+    <h1 class="lo_buscado"></h1>
     <section class="recetas">
     </section>
-    
+
     <footer>
         <div class="footer_nombres">
             <p>Sofía Sojo</p>
