responsive y detalles finales (con paula)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <ul class="carpetas">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="categories.html">CATEGORIAS</a></li>
+            <li><a href="categories.html">CATEGORÍAS</a></li>
             <li class="buscate"><form action="search-results.html" method="get" class="buscador">
                 <div class="buscatexto">
                     <label for="buscador">BUSCADOR</label>
@@ -42,9 +42,7 @@
     </form>
     <footer> 
         <div class="footer_nombres">
-            <p>Sofía Sojo</p>
-            <p>Paula Bernstein</p>
-            <p>Sophia Haley</p>
+            <p>Sofía Sojo  |  Paula Bernstein  |  Sophia Haley</p>
         </div>
     </footer>
 
