--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
         <img class="logo" src="./img/logobakery.png" alt="logo">
         <ul class="carpetas">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="categories.html">CATEGORIAS</a></li>
+            <li><a href="categories.html">CATEGORÍAS</a></li>
             <li class="buscate"><form action="search-results.html" method="get" class="buscador">
                 <div class="buscatexto">
                     <label for="buscador">BUSCADOR</label>
@@ -58,9 +58,7 @@
 
     <footer> 
         <div class="footer_nombres">
-            <p>Sofía Sojo</p>
-            <p>Paula Bernstein</p>
-            <p>Sophia Haley</p>
+            <p>Sofía Sojo  |  Paula Bernstein  |  Sophia Haley</p>
         </div>
     </footer>
     
